; ModuleID = '/home/carl/AnghaBench/systemd/src/resolve/extr_test-dnssec.c_test_dnssec_canonicalize_one.c'
source_filename = "/home/carl/AnghaBench/systemd/src/resolve/extr_test-dnssec.c_test_dnssec_canonicalize_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DNSSEC_CANONICAL_HOSTNAME_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32)* @test_dnssec_canonicalize_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_dnssec_canonicalize_one(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* @DNSSEC_CANONICAL_HOSTNAME_MAX, align 4
  %11 = zext i32 %10 to i64
  %12 = call i8* @llvm.stacksave()
  store i8* %12, i8** %7, align 8
  %13 = alloca i8, i64 %11, align 16
  store i64 %11, i64* %8, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = trunc i64 %11 to i32
  %16 = call i32 @dnssec_canonicalize(i8* %14, i8* %13, i32 %15)
  %17 = load i32, i32* %6, align 4
  %18 = icmp eq i32 %16, %17
  %19 = zext i1 %18 to i32
  %20 = call i32 @assert_se(i32 %19)
  %21 = load i32, i32* %6, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %3
  store i32 1, i32* %9, align 4
  br label %28

24:                                               ; preds = %3
  %25 = load i8*, i8** %5, align 8
  %26 = call i32 @streq(i8* %13, i8* %25)
  %27 = call i32 @assert_se(i32 %26)
  store i32 0, i32* %9, align 4
  br label %28

28:                                               ; preds = %24, %23
  %29 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %29)
  %30 = load i32, i32* %9, align 4
  switch i32 %30, label %32 [
    i32 0, label %31
    i32 1, label %31
  ]

31:                                               ; preds = %28, %28
  ret void

32:                                               ; preds = %28
  unreachable
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @assert_se(i32) #2

declare dso_local i32 @dnssec_canonicalize(i8*, i8*, i32) #2

declare dso_local i32 @streq(i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
